[Add] Avoid overlap on text amount

--- a/qlip_bussines_theme/public/css/qlip_bussines_theme.css
+++ b/qlip_bussines_theme/public/css/qlip_bussines_theme.css
@@ -759,6 +759,11 @@ body.no-breadcrumbs .navbar .navbar-home:before {
   min-height: 36px;
   padding-top: 8px;
   padding-bottom: 2px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  vertical-align: middle;
 }
 
 .control-value.like-disabled-input ~ label {
